--- a/admin-panel-master/css/style.css
+++ b/admin-panel-master/css/style.css
@@ -26,7 +26,7 @@
 #content-wrapper {
 	width: auto;
 	margin-left: 200px;
-    background-color: #ff6441;
+    background-color: #419AFF;
 	height: 1200px;
 	padding: 15px;
 }
